// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsPage container renders correctly when activityType is diagnostic 1`] = `
<DocumentFragment>
  <div
    class="results-page-container white-background-accommodate-footer"
  >
    <div
      id="results-page"
    >
      <div
        class="top-section"
      >
        <h1>
          Activity Complete!
        </h1>
        <div
          class="header-buttons"
        >
          <a
            class="quill-button primary contained large focus-on-light"
            href="/"
          >
            Return to dashboard
          </a>
        </div>
      </div>
      <div
        class="activity-results"
      >
        <div
          class="activity-name-and-overall-score"
        >
          <div>
            <h2>
              Cool Activity
            </h2>
          </div>
          <div
            class="results-icon-container"
          >
            <div
              class="icon"
              style="background-color: rgb(77, 141, 217);"
            >
              <img
                alt="activity-type"
                src="undefined/images/tools/tool-diagnostic-white.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="results-section"
        >
          <h2>
            You completed a diagnostic!
          </h2>
          <p
            class="diagnostic-explanation"
          >
            You won’t see a score for diagnostics, but we’ll use the results to create a personalized learning plan just for you. Your teacher will review the results and assign practice activities to help you grow as a writer.
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ResultsPage container renders correctly when showExactScore is false 1`] = `
<DocumentFragment>
  <div
    class="results-page-container white-background-accommodate-footer"
  >
    <div
      id="results-page"
    >
      <div
        class="top-section"
      >
        <h1>
          Activity Complete!
        </h1>
        <div
          class="header-buttons"
        >
          <a
            class="quill-button primary contained large focus-on-light"
            href="/"
          >
            Return to dashboard
          </a>
          <a
            class="quill-button secondary outlined large focus-on-light"
            href="/activity_sessions/1/student_activity_report"
          >
            View results
          </a>
          <a
            class="quill-button secondary outlined large focus-on-light"
            href="/activity_sessions/classroom_units/undefined/activities/undefined"
          >
            Replay activity
          </a>
        </div>
      </div>
      <div
        class="activity-results"
      >
        <div
          class="activity-name-and-overall-score"
        >
          <div>
            <h2>
              Cool Activity
            </h2>
          </div>
          <div
            class="results-icon-container"
          >
            <div
              class="icon"
              style="background-color: rgb(235, 153, 17);"
            >
              <img
                alt="activity-type"
                src="undefined/images/tools/tool-proofreader-white.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="results-section"
        >
          <h2>
            Proficient
          </h2>
          <div
            class="target-skill"
          >
            <span>
              Capitalizing Geographic Names
            </span>
            <span />
          </div>
        </div>
        <div
          class="results-section"
        >
          <h2>
            Keep Practicing
          </h2>
          <div
            class="target-skill"
          >
            <span>
              Capitalizing Dates
            </span>
            <span />
          </div>
          <div
            class="target-skill"
          >
            <span>
              Capitalizing Holidays
            </span>
            <span />
          </div>
        </div>
      </div>
      <div
        class="keep-practicing-section"
      >
        <img
          alt=""
          src="undefined/images/pages/student_results_page/pencil_illustration.svg"
        />
        <div>
          <h2>
            Keep practicing!
          </h2>
          <p>
            Becoming a strong writer takes practice. You kept going and finished the activity! By practicing, you will continue to improve and build your skills.
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ResultsPage container renders correctly when showExactScore is true 1`] = `
<DocumentFragment>
  <div
    class="results-page-container white-background-accommodate-footer"
  >
    <div
      id="results-page"
    >
      <div
        class="top-section"
      >
        <h1>
          Activity Complete!
        </h1>
        <div
          class="header-buttons"
        >
          <a
            class="quill-button primary contained large focus-on-light"
            href="/"
          >
            Return to dashboard
          </a>
          <a
            class="quill-button secondary outlined large focus-on-light"
            href="/activity_sessions/1/student_activity_report"
          >
            View results
          </a>
          <a
            class="quill-button secondary outlined large focus-on-light"
            href="/activity_sessions/classroom_units/undefined/activities/undefined"
          >
            Replay activity
          </a>
        </div>
      </div>
      <div
        class="activity-results"
      >
        <div
          class="activity-name-and-overall-score"
        >
          <div>
            <h2>
              Cool Activity
            </h2>
            <p>
              Total Score: 8 of 13 target skills correct (61%)
            </p>
          </div>
          <div
            class="results-icon-container"
          >
            <div
              class="icon"
              style="background-color: rgb(235, 153, 17);"
            >
              <img
                alt="activity-type"
                src="undefined/images/tools/tool-proofreader-white.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="results-section"
        >
          <h2>
            Proficient
          </h2>
          <div
            class="target-skill"
          >
            <span>
              Capitalizing Geographic Names
            </span>
            <span>
              5 of 5 correct (100%)
            </span>
          </div>
        </div>
        <div
          class="results-section"
        >
          <h2>
            Keep Practicing
          </h2>
          <div
            class="target-skill"
          >
            <span>
              Capitalizing Dates
            </span>
            <span>
              2 of 5 correct (40%)
            </span>
          </div>
          <div
            class="target-skill"
          >
            <span>
              Capitalizing Holidays
            </span>
            <span>
              1 of 3 correct (33%)
            </span>
          </div>
        </div>
      </div>
      <div
        class="keep-practicing-section"
      >
        <img
          alt=""
          src="undefined/images/pages/student_results_page/pencil_illustration.svg"
        />
        <div>
          <h2>
            Keep practicing!
          </h2>
          <p>
            Becoming a strong writer takes practice. You kept going and finished the activity! By practicing, you will continue to improve and build your skills.
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
